部分代码用lambda表达式重写了